# folio

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  biome.json  package.json
.github/workflows/: ci.yml  release.yml
crates/core/: Cargo.toml
crates/core/src/: default_paths.rs  filesystem.rs  lib.rs  notes.rs  watcher.rs
crates/folio/: CLAUDE.md  INTEGRATION_TEST.md  NAVIGATION_MIGRATION.md  README.md  biome.json  package.json
crates/folio-solid/: README.md  package.json
crates/folio-solid/src/: App.tsx  index.tsx  style.css
crates/folio-solid/src-tauri/: Cargo.toml  tauri.conf.json
crates/folio/src/: App.css  App.tsx  style.css  types.ts
crates/folio/src-tauri/: Cargo.toml  tauri.conf.json
crates/frontend/: .prettierignore  package-lock.json  package.json
crates/notes-core/: Cargo.toml
crates/notes-gpui/: Cargo.toml
docs/: auto-update.md  frecency.md  frontend-api.md  rust-api-reference.md  rust-error-handling.md  rust-integration-guide.md
scripts/: bump-version.js  sync-version.sh
src/: App.css  App.tsx  actions.rs  app.rs  editor.rs  filesystem.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src/components/: Editor.tsx  EditorManager.tsx  Navigation.tsx  NavigationControls.tsx  PasswordPrompt.tsx
src/contexts/: ActiveNoteContext.tsx  LockContext.tsx
src/hooks/: useActiveNoteData.ts  useKeyboardShortcuts.ts  useNotes.ts
src/lib/: crypto.ts  notes.ts  settings.ts
src/stores/: notes.ts
src/types/: notes.ts
src/ui/: breadcrumb.rs  editor.rs  mod.rs
(+74 files in other folders)
