[package]
name = "notes"
version = "0.1.0"
edition = "2024"

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed" }
unicode-segmentation = "1.9.0"
rusqlite = { version = "0.37.0", features = ["bundled"] }

[dev-dependencies]
gpui = { git = "https://github.com/zed-industries/zed", features = ["test-support"] }
tempfile = "3.23.0"
