[package]
name = "folio_core"
version = "0.1.0"
edition = "2024"
authors = ["Korbin de Man"]
license = "MIT"
repository = "https://github.com/korbindeman/folio"

[dependencies]
rusqlite = { version = "0.37.0", features = ["bundled"] }
notify = "6.1.1"
dirs = "5.0"

[dev-dependencies]
tempfile = "3.23.0"
