[package]
name = "folio_core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rusqlite = { version = "0.37.0", features = ["bundled"] }
notify = "6.1.1"
dirs = "5.0"

[dev-dependencies]
tempfile = "3.23.0"
